--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
-body{
-    /*background-color: black;*/
+.header{
+    display: flex;    
+    width: 100%;
 }
+.left{
+    width: 20%;   
+}
+.right{
+    width: 80%;   
+}
+
+.navigace{
+    width: 100%;
+}
+.panelUzivatele{
+    width: 100%;
+    padding: 10px;
+}
+.left img{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+}
+
 
 .navigace{
     margin: 0;
@@ -103,3 +126,4 @@ span#span-vysledky {
     border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
     border-image: initial;
   }
+ 
